--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ if __name__ == "__main__":
 "README.md": `## Streamlit Hello demo`,
 "__init__.py": `# Copyright 2018-2022 Streamlit Inc.`,
 "utils.py": `# Copyright 2018-2022 Streamlit Inc.`,
-".streamlit/config.toml": `theme',
+".streamlit/config.toml": 'theme',
 
 },
   },
