--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@ def run():
 if __name__ == "__main__":
     run()
 `,
+".streamlit/config.toml": 'theme',
 "README.md": `## Streamlit Hello demo`,
 "__init__.py": `# Copyright 2018-2022 Streamlit Inc.`,
 "utils.py": `# Copyright 2018-2022 Streamlit Inc.`,
-".streamlit/config.toml": 'theme',
+"pages/1_Plotting_Demo.py": `# Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)`,
+"pages/0_Animation_Demo.py": `# Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)`,
+"pages/2_Mapping_Demo.py": `# Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)`,
+"pages/3_DataFrame_Demo.py": `# Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)`,
 
 },
   },
