--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@ if __name__ == "__main__":
 "pages/0_Animation_Demo.py": `# Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)`,
 "pages/2_Mapping_Demo.py": `# Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)`,
 "pages/3_DataFrame_Demo.py": `# Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)`,
-".streamlit/config.toml": `[server]`,
+".streamlit/config.toml": 
+`[theme]
+primaryColor="#4bdcff"
+backgroundColor="#455373"
+secondaryBackgroundColor="#b3786a"
+textColor="#ffffff"`,
 },
   },
   document.getElementById("root")
