--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@ primaryColor="#4bdcff"
 backgroundColor="#455373"
 secondaryBackgroundColor="#b3786a"
 textColor="#ffffff"`,
+
+"images/1.jpg" : {url:"./images/1.jpg"},
 },
   },
   document.getElementById("root")
