--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@ if __name__ == "__main__":
 "__init__.py": `# Copyright 2018-2022 Streamlit Inc.`,
 "utils.py": `# Copyright 2018-2022 Streamlit Inc.`,
 ".streamlit/config.toml": 
-`[theme]
+`
+[theme]
+base="light"
 primaryColor="#4bdcff"
-backgroundColor="#455373"
-secondaryBackgroundColor="#b3786a"
-textColor="#ffffff"`,
+secondaryBackgroundColor="#f3e7e7"
+textColor="#6886b1"
+`,
 
 "images/1.jpg" : {url:"./images/1.jpg"},
 },
