--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ textColor="#6886b1"
 "images/13.jpg" : {url:"./images/13.jpg"},
 "images/14.jpg" : {url:"./images/14.jpg"},
 
+"audio/1.mp3" : {url:"./audio/1.mp3"},
+
 
 },
   },
