--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ from streamlit.logger import get_logger
 
 LOGGER = get_logger(__name__)
 
-
 if "step" not in st.session_state:
       st.session_state["step"] = 0
 
@@ -54,7 +53,6 @@ if "zaal_dict" not in st.session_state:
       15: "Landgoed ",
       }
 
-
 def artwork(i):
     
     if i == 0:
@@ -74,7 +72,6 @@ def artwork(i):
 
     return 
 
-
 def run():
     st.set_page_config(
         page_title="Jubilee",
@@ -92,25 +89,12 @@ def run():
     st.write("## Paul & Mieke")
 
     artwork(st.session_state["step"])
-    
-    col1, col3 = st.columns([1, 1])
-    with col1:
-      st.button("Vorige", on_click=lambda: st.session_state.update(step=max(st.session_state["step"] - 1, 0)))
-    with col3:
-      st.button("Volgende", type='primary', on_click=lambda: st.session_state.update(step=st.session_state["step"] + 1))
 
+    if st.session_state["step"] == 16:
+      st.balloons()
 
-    st.write(f"## {st.session_state['step']}")
-  
-
-    #st.write("### Zaal 1")
-    #st.write("### Zaal 2")
-    #st.write("### Zaal 3")
-    #st.write("### Zaal 4")
-    #st.write("### Zaal 5")
-    #st.write("### Zaal 6")
-    #st.write("### Zaal 7")
-    #st.write("### Zaal 8")
+    st.button("Volgende kunstwerk", type='primary', on_click=lambda: st.session_state.update(step=min(st.session_state["step"] + 1, 16)))
+    st.button("Vorige", on_click=lambda: st.session_state.update(step=max(st.session_state["step"] - 1, 0)))
 
 if __name__ == "__main__":
     run()
